# bm-poc

./: .gitignore  foundry.toml  readme.md
py/: Cargo.toml  bls.py  bm_bls.py  bm_sb.py  ec.py  generate-fixtures.py  hash_to_field.py  hash_to_point.py  pyproject.toml  requirements.txt  utils.py
py/data/: input.json  input_aggr.json  input_aggr_hm.json
py/plots/: gas_plot.py  time_plot.py
py/py_eth_pairing/: __init__.py
py/src/: lib.rs
src/: BM_BLS.sol  BM_SB.sol
src/interfaces/: IBLS.sol
src/libs/: BN254.sol  ModExp.sol
src/utils/: BLS.sol
test/: BLS.t.sol  BM_BLS.t.sol  BM_SB.t.sol  BN254.sol
