[package]
name = "py_eth_pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth_pairings = { git = "https://github.com/matter-labs/eip1962.git", version = "0.6.0" }

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module"]

[lib]
name = "eth_pairing_py"
crate-type = ["cdylib"]
